// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: all on x=0 1`] = `
<div
  className="measure-overview-bubble-chart"
>
  <div
    className="measure-overview-bubble-chart-header"
  >
    <span
      className="measure-overview-bubble-chart-title"
    >
      <div
        className="display-flex-center"
      >
        component_measures.domain_x_overview.Security
        <HelpTooltip
          className="spacer-left"
          overlay={null}
        />
      </div>
    </span>
    <span
      className="measure-overview-bubble-chart-legend"
    >
      <span
        className="note"
      >
        <span
          className="spacer-right"
        >
          component_measures.legend.color_x.security_rating
        </span>
        component_measures.legend.size_x.vulnerabilities
      </span>
      <ColorRatingsLegend
        className="spacer-top"
        filters={{}}
        onRatingClick={[Function]}
      />
    </span>
  </div>
  <div
    className="measure-overview-bubble-chart-content"
  >
    <div
      className="text-center small spacer-top spacer-bottom"
    >
      <ForwardRef(Link)
        to={
          {
            "pathname": "/component_measures",
            "search": "?id=foo&metric=vulnerabilities&view=list",
          }
        }
      >
        component_measures.overview.see_data_as_list
      </ForwardRef(Link)>
    </div>
    <BubbleChart
      displayXGrid={true}
      displayXTicks={true}
      displayYGrid={true}
      displayYTicks={true}
      formatXTick={[Function]}
      formatYTick={[Function]}
      height={500}
      items={
        [
          {
            "color": undefined,
            "data": {
              "key": "foo:src/index.tsx",
              "leak": "1.0",
              "measures": [
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "ncloc",
                    "key": "ncloc",
                    "name": "ncloc",
                    "type": "INT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "0",
                },
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "security_remediation_effort",
                    "key": "security_remediation_effort",
                    "name": "security_remediation_effort",
                    "type": "DATA",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "0",
                },
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "vulnerabilities",
                    "key": "vulnerabilities",
                    "name": "vulnerabilities",
                    "type": "INT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "0",
                },
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "security_rating",
                    "key": "security_rating",
                    "name": "security_rating",
                    "type": "RATING",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "0",
                },
              ],
              "name": "index.tsx",
              "path": "src/index.tsx",
              "qualifier": "FIL",
              "value": "0",
            },
            "size": 0,
            "tooltip": <div
              className="text-left"
            >
              <React.Fragment>
                index.tsx
                <br />
              </React.Fragment>
              <React.Fragment>
                ncloc: 0
                <br />
              </React.Fragment>
              <React.Fragment>
                security_remediation_effort: 0
                <br />
              </React.Fragment>
              <React.Fragment>
                vulnerabilities: 0
                <br />
              </React.Fragment>
              <React.Fragment>
                security_rating: \`
              </React.Fragment>
            </div>,
            "x": 0,
            "y": 0,
          },
        ]
      }
      onBubbleClick={[Function]}
      padding={
        [
          25,
          60,
          50,
          60,
        ]
      }
      sizeRange={
        [
          5,
          45,
        ]
      }
      xDomain={
        [
          0,
          100,
        ]
      }
    />
  </div>
  <div
    className="measure-overview-bubble-chart-axis x"
  >
    ncloc
  </div>
  <div
    className="measure-overview-bubble-chart-axis y"
  >
    security_remediation_effort
  </div>
</div>
`;

exports[`should render correctly: default 1`] = `
<div
  className="measure-overview-bubble-chart"
>
  <div
    className="measure-overview-bubble-chart-header"
  >
    <span
      className="measure-overview-bubble-chart-title"
    >
      <div
        className="display-flex-center"
      >
        component_measures.domain_x_overview.Security
        <HelpTooltip
          className="spacer-left"
          overlay={null}
        />
      </div>
    </span>
    <span
      className="measure-overview-bubble-chart-legend"
    >
      <span
        className="note"
      >
        <span
          className="spacer-right"
        >
          component_measures.legend.color_x.security_rating
        </span>
        component_measures.legend.size_x.vulnerabilities
      </span>
      <ColorRatingsLegend
        className="spacer-top"
        filters={{}}
        onRatingClick={[Function]}
      />
    </span>
  </div>
  <div
    className="measure-overview-bubble-chart-content"
  >
    <div
      className="text-center small spacer-top spacer-bottom"
    >
      <ForwardRef(Link)
        to={
          {
            "pathname": "/component_measures",
            "search": "?id=foo&metric=vulnerabilities&view=list",
          }
        }
      >
        component_measures.overview.see_data_as_list
      </ForwardRef(Link)>
    </div>
    <BubbleChart
      displayXGrid={true}
      displayXTicks={true}
      displayYGrid={true}
      displayYTicks={true}
      formatXTick={[Function]}
      formatYTick={[Function]}
      height={500}
      items={
        [
          {
            "color": {
              "fill": "#C6E056",
              "fillTransparent": "rgba(198, 224, 86, 0.2)",
              "stroke": "#809E00",
            },
            "data": {
              "key": "foo:src/index.tsx",
              "leak": "1.0",
              "measures": [
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "ncloc",
                    "key": "ncloc",
                    "name": "ncloc",
                    "type": "INT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "236",
                },
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "security_remediation_effort",
                    "key": "security_remediation_effort",
                    "name": "security_remediation_effort",
                    "type": "DATA",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "10",
                },
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "vulnerabilities",
                    "key": "vulnerabilities",
                    "name": "vulnerabilities",
                    "type": "INT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "3",
                },
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "security_rating",
                    "key": "security_rating",
                    "name": "security_rating",
                    "type": "RATING",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "2",
                },
              ],
              "name": "index.tsx",
              "path": "src/index.tsx",
              "qualifier": "FIL",
              "value": "3",
            },
            "size": 3,
            "tooltip": <div
              className="text-left"
            >
              <React.Fragment>
                index.tsx
                <br />
              </React.Fragment>
              <React.Fragment>
                ncloc: 236
                <br />
              </React.Fragment>
              <React.Fragment>
                security_remediation_effort: 10
                <br />
              </React.Fragment>
              <React.Fragment>
                vulnerabilities: 3
                <br />
              </React.Fragment>
              <React.Fragment>
                security_rating: B
              </React.Fragment>
            </div>,
            "x": 236,
            "y": 10,
          },
        ]
      }
      onBubbleClick={[Function]}
      padding={
        [
          25,
          60,
          50,
          60,
        ]
      }
      sizeRange={
        [
          5,
          45,
        ]
      }
    />
  </div>
  <div
    className="measure-overview-bubble-chart-axis x"
  >
    ncloc
  </div>
  <div
    className="measure-overview-bubble-chart-axis y"
  >
    security_remediation_effort
  </div>
</div>
`;

exports[`should render correctly: only showing first 500 files 1`] = `
<div
  className="measure-overview-bubble-chart"
>
  <div
    className="measure-overview-bubble-chart-header"
  >
    <span
      className="measure-overview-bubble-chart-title"
    >
      <div
        className="display-flex-center"
      >
        component_measures.domain_x_overview.Security
        <HelpTooltip
          className="spacer-left"
          overlay={null}
        />
      </div>
      <div
        className="note spacer-top"
      >
        (
        component_measures.legend.only_first_500_files
        )
      </div>
    </span>
    <span
      className="measure-overview-bubble-chart-legend"
    >
      <span
        className="note"
      >
        <span
          className="spacer-right"
        >
          component_measures.legend.color_x.security_rating
        </span>
        component_measures.legend.size_x.vulnerabilities
      </span>
      <ColorRatingsLegend
        className="spacer-top"
        filters={{}}
        onRatingClick={[Function]}
      />
    </span>
  </div>
  <div
    className="measure-overview-bubble-chart-content"
  >
    <div
      className="text-center small spacer-top spacer-bottom"
    >
      <ForwardRef(Link)
        to={
          {
            "pathname": "/component_measures",
            "search": "?id=foo&metric=vulnerabilities&view=list",
          }
        }
      >
        component_measures.overview.see_data_as_list
      </ForwardRef(Link)>
    </div>
    <BubbleChart
      displayXGrid={true}
      displayXTicks={true}
      displayYGrid={true}
      displayYTicks={true}
      formatXTick={[Function]}
      formatYTick={[Function]}
      height={500}
      items={
        [
          {
            "color": {
              "fill": "#C6E056",
              "fillTransparent": "rgba(198, 224, 86, 0.2)",
              "stroke": "#809E00",
            },
            "data": {
              "key": "foo:src/index.tsx",
              "leak": "1.0",
              "measures": [
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "ncloc",
                    "key": "ncloc",
                    "name": "ncloc",
                    "type": "INT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "236",
                },
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "security_remediation_effort",
                    "key": "security_remediation_effort",
                    "name": "security_remediation_effort",
                    "type": "DATA",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "10",
                },
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "vulnerabilities",
                    "key": "vulnerabilities",
                    "name": "vulnerabilities",
                    "type": "INT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "3",
                },
                {
                  "bestValue": true,
                  "leak": "1.0",
                  "metric": {
                    "id": "security_rating",
                    "key": "security_rating",
                    "name": "security_rating",
                    "type": "RATING",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "2",
                },
              ],
              "name": "index.tsx",
              "path": "src/index.tsx",
              "qualifier": "FIL",
              "value": "3",
            },
            "size": 3,
            "tooltip": <div
              className="text-left"
            >
              <React.Fragment>
                index.tsx
                <br />
              </React.Fragment>
              <React.Fragment>
                ncloc: 236
                <br />
              </React.Fragment>
              <React.Fragment>
                security_remediation_effort: 10
                <br />
              </React.Fragment>
              <React.Fragment>
                vulnerabilities: 3
                <br />
              </React.Fragment>
              <React.Fragment>
                security_rating: B
              </React.Fragment>
            </div>,
            "x": 236,
            "y": 10,
          },
        ]
      }
      onBubbleClick={[Function]}
      padding={
        [
          25,
          60,
          50,
          60,
        ]
      }
      sizeRange={
        [
          5,
          45,
        ]
      }
    />
  </div>
  <div
    className="measure-overview-bubble-chart-axis x"
  >
    ncloc
  </div>
  <div
    className="measure-overview-bubble-chart-axis y"
  >
    security_remediation_effort
  </div>
</div>
`;
